name:                env-parser-talk
version:             0.0.1.0
synopsis:            A nice way of reading the ENV
description:
  This package provides an \"environment parser\" capable of collecting
  application configuration information from the system environment nicely
  while also providing static documentation. 
  .
  /Motivation/
  .
  By default, Haskell includes only the 'System.Environment.lookupEnv' function
  .
  > lookupEnv :: String -> IO (Maybe String)
  .
  and it's not uncommon to use ad-hoc 'IO' computations structured to build
  program configuring using this primitive. However, since the environment
  forms a part of the public interface of a program, it'd be nice if our
  "environment parsing" were self-documenting. This package provides a
  'System.Environment.Parser.Parser' type to cover most of the practice of
  environment parsing, highly inspired by Parser types like @parsec@ or
  @attoparsec@. This type is useful not only for producing the program's
  runtime environment configuration but also for documenting the environment
  configuration interface the program exposes.

homepage:            http://github.com/tel/env-parser-talk
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           Copyright (c) 2012-2014 Joseph Abrahamson
category:            System
build-type:          Simple
extra-source-files:  Changelog, README.md
cabal-version:       >=1.10

library
  exposed-modules:
    System.Environment.Parser
    System.Environment.Parser.Internal.FreeA

  build-depends:       base >=4.6 && <4.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >=4.6 && <4.7
                     , env-parser-talk
                     , QuickCheck
                     , hspec
                     , unix
                     , hspec-expectations
  hs-source-dirs:      tests
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/tel/env-parser-talk.git
